# topchat-gui

./: .gitmodules  CMakeLists.txt  README.md  TopChatGUI.sln
.github/workflows/: cmake-multi-platform.yml
TopChatGUI/: GUI.cs  Program.cs
gui/: CMakeLists.txt  gui_global.h  interface.cpp  interface.h  login-state.cpp  main-window.cpp  main-window.h
gui-qt/TopChatGUI/: GUI.cs
gui-qt/gui/: interface-state.cpp  interface-state.h  interface.h  login-state.h
network-udp/: .gitignore  NetworkUdp.sln
network-udp/NetworkUdp/: NetworkUdp.csproj  NetworkUdpPlugin.cs
network-udp/NetworkUdp/Services/: ConnectionProviderUdp.cs
